// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MealsPlanCard /> should display most popular badge 1`] = `
<Fragment>
  <div
    className="flex flex-col border rounded-2xl cursor-pointer hover:border-primary-default overflow-hidden"
    onClick={[Function]}
  >
    <figure
      className="relative w-full h-40"
      role="none"
    >
      <Image
        alt="Test title"
        layout="fill"
        objectFit="cover"
        src="image.jpg"
      />
      <div
        className="absolute top-full left-1/2 py-1 px-2 font-serif text-lg font-normal text-white rounded-lg transform -translate-x-1/2 -translate-y-1/2 bg-secondary"
      >
        Most Popular
      </div>
    </figure>
    <div
      className="flex flex-col flex-grow pt-6 pb-5 mx-3 text-center"
    >
      <h3
        className="mb-2 font-serif text-3xl font-normal text-black"
      >
        Test title
      </h3>
      <div
        className="mb-4 text-quinary"
      >
        Test description
      </div>
      <div
        className="mt-auto mb-0"
      >
        <div
          className="mb-2 font-serif text-2xl font-normal text-secondary"
        >
          $
          10
          /serving
        </div>
        <div
          className="font-serif text-sm italic font-normal text-quinary"
        >
          Test note
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`<MealsPlanCard /> should renders correct <MealsPlanCard /> 1`] = `
<Fragment>
  <div
    className="flex flex-col border rounded-2xl cursor-pointer hover:border-primary-default overflow-hidden"
    onClick={[Function]}
  >
    <figure
      className="relative w-full h-40"
      role="none"
    >
      <Image
        alt="Test title"
        layout="fill"
        objectFit="cover"
        src="image.jpg"
      />
    </figure>
    <div
      className="flex flex-col flex-grow pt-6 pb-5 mx-3 text-center"
    >
      <h3
        className="mb-2 font-serif text-3xl font-normal text-black"
      >
        Test title
      </h3>
      <div
        className="mb-4 text-quinary"
      >
        Test description
      </div>
      <div
        className="mt-auto mb-0"
      >
        <div
          className="mb-2 font-serif text-2xl font-normal text-secondary"
        >
          $
          10
          /serving
        </div>
        <div
          className="font-serif text-sm italic font-normal text-quinary"
        >
          Test note
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;
